--- a/login.html
+++ b/login.html
@@ -30,6 +30,7 @@
             />
             <label for="clientPasswordIn">Enter your password</label>
           </div>
+          <p id="validationlogin" class="text-danger fw-bold"></p>
           <button id="signInButton" class=" btn-primary btn mb-3  ">Login</button>
         </div>
       </div>
